<resources>
    <string name="app_name">SweetMich4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="acerca_de">Acerca de</string>
    <string name="cambio_de_contrase_a">Cambio de contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="direcci_n">Dirección</string>
    <string name="tarjetas">Tarjetas</string>
    <string name="cambio_de_contrasena">Cambio de Contraseña</string>
    <string name="acercade">Acerca de</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="mis_direcciones">Mis direcciones</string>
    <string name="agregar_un_puntode_entrega">Agregar un puntode entrega</string>
    <string name="agregar_una_direcci_n">Agregar una dirección</string>
    <string name="direcciones_personales">Direcciones Personales</string>
    <string name="arma_tu_postre">Arma tu postre</string>
    <string name="c_talogo_de_postres">Cátalogo de Postres</string>
    <string name="paquetes">Paquetes</string>
    <string name="cat_logo_de_postres">Catálogo de postres</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="paquetes2">Paquetes</string>
    <string name="arma_tu_postre2">Arma tu postre</string>
    <string name="todo7">TODO</string>
    <string name="el_flan_es_un_postre_elaborado_con_una_natilla_teniendo_como_ingredientes_principales_huevos_enteros_leche_y_az_car">El flan es un postre elaborado con una natilla, teniendo como ingredientes principales huevos enteros, leche y azúcar.</string>
    <string name="flan">Flan</string>
    <string name="acerca_de_nosotros">Acerca de nosotros</string>
    <string name="pedidos">Pedidos</string>
    <string name="seco_de_cabrito">Seco de Cabrito</string>
    <string name="_5">5</string>
    <string name="seco_de_cabrito2">Seco de Cabrito</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="utiliza_el_siguiente_formulario_para_cambiar_la_contrae_a_de_tu_cuenta_de_sweet_mich">Utiliza el siguiente formulario para cambiar la contraeña de tu cuenta de Sweet Mich.</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="men">Menú</string>
    <string name="pedidos2">Pedidos</string>
    <string name="mi_perfil">Mi perfil</string>
</resources>