<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgItem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/todo7"
            android:foreground="@drawable/five"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flan"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/el_flan_es_un_postre_elaborado_con_una_natilla_teniendo_como_ingredientes_principales_huevos_enteros_leche_y_az_car"
                android:textSize="12sp" />
        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>