<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#5A5A5A"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="2"
        app:sliderStartAutoCycle="true"/>

    <Button
        android:id="@+id/buttonPaq"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="480dp"
        android:backgroundTint="@color/Color1"
        android:focusable="true"
        android:onClick="onClick"
        android:text="@string/paquetes"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonArm"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="390dp"
        android:backgroundTint="@color/Color1"
        android:focusable="true"
        android:onClick="onClick"
        android:text="@string/arma_tu_postre"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonCat"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/Color1"
        android:focusable="true"
        android:onClick="onClick"
        android:text="@string/c_talogo_de_postres"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="TextContrastCheck" />
</FrameLayout>